Fix label to avoid wrapping poorly,now break by word

--- a/app/design/adminhtml/Magento/backend/web/css/styles-old.less
+++ b/app/design/adminhtml/Magento/backend/web/css/styles-old.less
@@ -1383,7 +1383,7 @@
             line-height: 1.33;
             vertical-align: middle;
             white-space: normal;
-            word-break: break-all;
+            word-break: break-word;
 
             &[data-config-scope] {
                 position: relative;
